# bazel-nodejs-groups-ouput

./: README.md  WORKSPACE  package-lock.json  package.json
libs/utils/: BUILD.bazel  package.json
libs/utils/src/: index.js
tools/: bazel_deps.bzl  rename.bzl
